--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,13 @@ android {
 
 ext {
     androidSupportVersion = "27.1.1"
+    butterknifeVersion = "8.8.1"
     constraintLayoutVersion = '1.1.2'
     junitVersion = "4.12"
     runnerVersion = "1.0.2"
     espressoCoreVersion = "3.0.2"
     firebaseCoreVersion = "16.0.1"
+    firebaseJobdispatcherVersion = "0.8.5"
     firebaseMessagingVersion = "17.1.0"
     glideVersion = "4.7.1"
     gsonVersion = "2.8.2"
@@ -43,26 +45,24 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$androidSupportVersion"
 
     // tests
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
+    implementation "com.android.support:support-v4:$androidSupportVersion"
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "com.android.support.test:runner:$runnerVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoCoreVersion"
 
     // butterknife
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation "com.jakewharton:butterknife:$butterknifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
 
     // firebase
     implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
+    implementation "com.firebase:firebase-jobdispatcher:$firebaseJobdispatcherVersion"
     implementation "com.google.firebase:firebase-messaging:$firebaseMessagingVersion"
 
     // glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
-
-    // gson
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
 
     // multiline collapsingToolbar
     implementation "net.opacapp:multiline-collapsingtoolbar:$androidSupportVersion"
@@ -70,6 +70,7 @@ dependencies {
     // retrofit
     implementation "com.google.code.gson:gson:$gsonVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
 
     // stetho
     implementation "com.facebook.stetho:stetho:$stethoVersion"
