--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,11 @@ android {
         versionCode 3
         versionName "1.03"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -31,6 +36,7 @@ ext {
     glideVersion = "4.7.1"
     gsonVersion = "2.8.2"
     retrofitVersion = "2.4.0"
+    roomVersion = "1.1.1"
     stethoVersion = "1.5.0"
 }
 
@@ -71,6 +77,10 @@ dependencies {
     implementation "com.google.code.gson:gson:$gsonVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+
+    // room
+    implementation "android.arch.persistence.room:runtime:$roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
 
     // stetho
     implementation "com.facebook.stetho:stetho:$stethoVersion"
