--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,16 +27,17 @@ ext {
     androidSupportVersion = "27.1.1"
     butterknifeVersion = "8.8.1"
     constraintLayoutVersion = '1.1.2'
-    junitVersion = "4.12"
-    runnerVersion = "1.0.2"
     espressoCoreVersion = "3.0.2"
     firebaseCoreVersion = "16.0.1"
     firebaseJobdispatcherVersion = "0.8.5"
     firebaseMessagingVersion = "17.1.0"
     glideVersion = "4.7.1"
     gsonVersion = "2.8.2"
+    junitVersion = "4.12"
+    lifecycleVersion = "1.1.1"
     retrofitVersion = "2.4.0"
     roomVersion = "1.1.1"
+    runnerVersion = "1.0.2"
     stethoVersion = "1.5.0"
 }
 
@@ -70,11 +71,17 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
+    // gson
+    implementation "com.google.code.gson:gson:$gsonVersion"
+
+    // lifecycle
+    implementation "android.arch.lifecycle:extensions:$lifecycleVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$lifecycleVersion"
+
     // multiline collapsingToolbar
     implementation "net.opacapp:multiline-collapsingtoolbar:$androidSupportVersion"
 
     // retrofit
-    implementation "com.google.code.gson:gson:$gsonVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
 
