--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:launchMode="singleTop"
@@ -16,6 +16,7 @@
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -53,7 +54,7 @@
                 android:value=".ui.recipes.RecipesActivity" />
         </activity>
         <activity
-            android:name=".ui.GetInvolvedActivity"
+            android:name=".ui.getInvolved.GetInvolvedActivity"
             android:label="@string/get_involved"
             android:parentActivityName=".ui.MainActivity">
             <meta-data
@@ -61,7 +62,7 @@
                 android:value=".ui.MainActivity" />
         </activity>
         <activity
-            android:name=".ui.AboutActivity"
+            android:name=".ui.about.AboutActivity"
             android:label="@string/about"
             android:parentActivityName=".ui.MainActivity">
             <meta-data
@@ -79,7 +80,7 @@
         </service>
         <service
             android:name=".sync.ComfreySyncIntentService"
-            android:exported="false"></service>
+            android:exported="false"/>
     </application>
 
 </manifest>
